form implementation for github

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<!-- This file is intentionally left blank as GitHub Pages serves content from /out/ -->
-<!-- The GitHub workflow handles the proper deployment of files -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="github-repo-owner" content="TheBackusAgency">
+  <meta name="github-repo-name" content="tba-static">
+  <title>The Backus Agency</title>
+  <meta http-equiv="refresh" content="0;URL='/out/'" />  
+</head>
+<body>
+  <!-- This file is intentionally blank as GitHub Pages serves content from /out/ -->
+  <!-- The GitHub workflow handles the proper deployment of files -->
+</body>
+</html>
