fixing for MS edge browser

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta name="github-repo-owner" content="TheBackusAgency">
   <meta name="github-repo-name" content="tba-static">
   <title>The Backus Agency</title>
-  <meta http-equiv="refresh" content="0;URL='/'" />  
+  <meta http-equiv="refresh" content="0;URL='/index.html'" />
 </head>
 <body>
-  <!-- This file is intentionally blank as GitHub Pages serves content from root -->
-  <!-- The GitHub workflow handles the proper deployment of files -->
+  <!-- This file automatically redirects to the main index.html -->
 </body>
 </html>
