still fixing for MS edge browser

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="github-repo-owner" content="TheBackusAgency">
-  <meta name="github-repo-name" content="tba-static">
   <title>The Backus Agency</title>
-  <meta http-equiv="refresh" content="0;URL='/index.html'" />
+  <script>
+    // Simple redirect that works in all browsers
+    window.location.replace("/out/");
+  </script>
 </head>
 <body>
-  <!-- This file automatically redirects to the main index.html -->
+  <p>Redirecting to the main site...</p>
 </body>
 </html>
