still fixing for MS edge browser

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Backus Agency</title>
-  <script>
-    // Simple redirect that works in all browsers
-    window.location.replace("/out/");
-  </script>
 </head>
 <body>
-  <p>Redirecting to the main site...</p>
+  <!-- 
+    This file is a placeholder. The GitHub Pages deployment 
+    will replace content with files from the /out directory.
+  -->
+  <div style="text-align: center; font-family: Arial, sans-serif; margin-top: 100px;">
+    <h1>The Backus Agency</h1>
+    <p>This site is deployed via GitHub Pages.</p>
+  </div>
 </body>
 </html>
