--- a/index.html
+++ b/index.html
@@ -3,51 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0;url=/" />
+  <meta http-equiv="refresh" content="0;url=/out/" />
   <title>The Backus Agency</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #0B0B0B;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-    .loading {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .spinner {
-      border: 4px solid rgba(255, 255, 255, 0.1);
-      border-left-color: #3498db;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin-bottom: 20px;
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-  </style>
-  <script>
-    // Ensure we go to the actual site content
-    window.onload = function() {
-      window.location.href = '/';
-    }
-  </script>
 </head>
 <body>
-  <div class="loading">
-    <div class="spinner"></div>
-    <h1>The Backus Agency</h1>
-    <p>Loading your site content...</p>
-  </div>
+  <p>Redirecting to the website...</p>
 </body>
 </html>
