--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
   <\!-- Include scripts from root to ensure they're accessible from anywhere -->
   <script src="/form-fixer.js"></script>
   <script src="/path-fixer.js"></script>
+  <script src="/js/form-interceptor.js"></script>
+  <script src="/js/contact-form-fix.js"></script>
+  <script src="/js/direct-form-fix.js"></script>
+  <script src="/js/dropdown-fix.js"></script>
   <script src="/js/modal.js"></script>
 </body>
 </html>
