dropdown fix files

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <script src="/js/contact-form-fix.js"></script>
   <script src="/js/direct-form-fix.js"></script>
   <script src="/js/dropdown-fix.js"></script>
+  <script src="/js/native-select-fix.js"></script>
   <script src="/js/modal.js"></script>
 </body>
 </html>
