--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <script src="/js/direct-form-fix.js"></script>
   <script src="/js/dropdown-fix.js"></script>
   <script src="/js/native-select-fix.js"></script>
+  <script src="/js/dropdown-event-handlers.js"></script>
   <script src="/js/modal.js"></script>
 </body>
 </html>
