--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
     <p>Loading website...</p>
   </div>
   
+  <\!-- Universal form interceptor must be first -->
+  <script src="/js/universal-form-redirect.js"></script>
+
+  <\!-- Include scripts from root to ensure they're accessible from anywhere -->
   <\!-- Include scripts from root to ensure they're accessible from anywhere -->
   <script src="/form-fixer.js"></script>
   <script src="/path-fixer.js"></script>
   <script src="/js/form-interceptor.js"></script>
+  <script src="/js/hardcoded-form-override.js"></script>
   <script src="/js/contact-form-fix.js"></script>
   <script src="/js/direct-form-fix.js"></script>
   <script src="/js/dropdown-fix.js"></script>
