working CORS fix and form submissions still

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <\!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Form interception script first to catch everything else -->
+  <script src="/js/universal-form-redirect.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Backus Agency</title>
