--- a/backus_security_portal_intelligent.html
+++ b/backus_security_portal_intelligent.html
@@ -959,8 +959,8 @@
         </div>
     </div>
 
-    <!-- Simple Assessment Handler - Production Ready -->
-    <script src="js/security-assessment-simple.js"></script>
+    <!-- Cloud Assessment Handler with JSONBin.io - Cross-location Ready -->
+    <script src="js/security-assessment-jsonbin.js"></script>
 
     <script>
         // State Management
